# tradestation-python

./: README.md
example/: README.md  bars.py
tradestation-python/: .codacy.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.rst  Taskfile.yml  appveyor.yml  environment.yml  pyproject.toml
tradestation-python/.circleci/: config.yml
tradestation-python/conda.recipe/: build.sh  meta.yaml
tradestation-python/src/tradestation_python/: __init__.py  __main__.py  _auth.py  _base_client.py  _client.py  _config.py  _resource.py  cli.py
tradestation-python/src/tradestation_python/resources/: __init__.py
tradestation-python/src/tradestation_python/resources/brokerage/: __init__.py  brokerage.py
tradestation-python/src/tradestation_python/resources/market_data/: __init__.py  market_data.py
tradestation-python/src/tradestation_python/resources/order_execution/: __init__.py  order_execution.py
tradestation-python/src/tradestation_python/types/enums/: __init__.py  scope.py  session_template.py  unit.py
tradestation-python/src/tradestation_python/types/responses/: __init__.py  accounts.py  bars.py  base.py  openid.py  token.py
tradestation-python/tests/: test_cli.py
